--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,16 @@
+<html>
+
 <button>Think you know a lot about Game of Thrones?</button>
+
+<head>
+    <meta charset="utf-8">
+    <title>Basic Bootstrap Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+</head>
+<body>
+    <h1>Hello, world!</h1>
+    <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <sdcript src="js/bootstrap.min.js"></script>
+</body>
+</html>
