adding fields_for to get answers to show for each question. not quite fuctioning correctly

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,23 @@
+<%= @questions.each do |question| %>
+ <%= question.content %>
 
+  <%= fields_for :answers, @answers.each do |answer| %>
+    <%= answer.content  %>
+  <% end %>
+
+<% end %>
+    
+
+
+
+
+
+
+
+
+
+
+<!-- 
     <table>
     	<% @questions.each do |question| %>
     		<tr>
@@ -9,7 +28,7 @@
     			</td>
 			</tr>
    		<% end %>
-    </table>
+    </table> -->
 
 
 
