--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -1,9 +1,8 @@
-    <table>
-    	<% @questions.each do |question| %>
-    		<tr>
-    			<%= question.content %>
-			</tr>
-   		<% end %>
-    </table>
+<%= form_for @question do |question| %>
+  Question: <%= question.content :content %>
 
-    <!-- not working -->
+  <%= fields_for :answers, @answers do |answer| %>
+    <%= answer.content :content %>
+  <% end %>
+
+<% end %>
