changed associations to 'has_and_belongs_to_many'. moved home index form into _form file. fixed syntax error in seed file

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,17 +1,4 @@
-<table>
-<tr>
-<%= @questions.each do |question| %>
-<td> <%= question.content %> </td>
-</tr>
-<tr>
-  <%= @answers.each do |answer| %>
-   <td> <%= answer.content %> </td>
-  <% end %>
-</tr>
-<% end %>
-    
-</table>
-
+<%= render partial: "form" %>
 
 
 
