route to questions#index not working. need to redo form for questions. data still not rendering correctly in view. seeding problem?

--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -1,8 +1,12 @@
 
-<%= @questions.each do |question| %>
- <%= question.content %> 
-
-
+<%= form_for :question do |f| %>
+<p>
+	f.question.content
 <% end %>
-    
+
+
+
+
+
+
 
