--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,3 +1,8 @@
-<% @questions.each do |question| %>
+<% form_for @questions.each do |question| %>
 	<%= question.content %>
+
+<%  3.times do |answer| %>
+	<%= answer.content %>
+
+
 <% end %>
