changed versions of gems in gemfile. bootstrap functioning correctly

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -12,6 +12,7 @@
     </header>
 	<head>
 		<title>Quiz of Thrones</title>
+		<link href='css/main.css' rel='stylesheet'>
 		<link href='css/bootstrap.css' rel='stylesheet'>
 	</head>
 
@@ -25,8 +26,8 @@
 					<input type="radio" name="answers"><%= answer.content %>
 					<br>
 				<% end %>
-				<input type="submit" name="submit">	
 			<% end %>
+				<input type="submit" name="submit">	
 		</ul>
 	</div>
 
