user is allowed to select one answer for each question

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,9 @@
             <li><%= link_to "High Scores",   '#' %></li>
             <li><%= link_to "Log in", '#' %></li>
           </ul>
+          <ul class='nav navbar-nav navbar-left'>
+            <li><%= link_to "Start Quiz", '#' %></li>
+          </ul>  
         </nav>
       </div>
     </header>
