adding #test_status to questions#index. checked answer is now selected answer in js

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -18,6 +18,7 @@
 		<h1 class="animated bounceInDown">Quiz of Thrones</h1>
         <p class="animated fadeInUpDelay">Think you know Game of Thrones?</p>
 
+    <div id='test_status'></div>
 	<div id="quiz">
 	<div class='col-md-12'>
 		<ul>
