--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -31,7 +31,7 @@
 				<% end %>
 			</form>
 			<% end %>
-				<input type="submit" name="submit">	
+				<input type="submit" name="submit" id="submitting_answer">	
 		</ul>
 	</div>
 	</div>
