took redundant hrefs out of questions#index. commented out some js to fix the problem with checking answers functionality

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -10,8 +10,7 @@
     </header>
 	<head>
 		<title>Quiz of Thrones</title>
-		<link href='css/main.css' rel='stylesheet'>
-		<link href='css/bootstrap.css' rel='stylesheet'>
+		
 	</head>
 
 	<body>
@@ -31,13 +30,13 @@
 				<% end %>
 			</form>
 			<% end %>
-				<input type="submit" name="submit" id="submitting_answer">	
+				<input type="submit" name="submitbtn">	
 		</ul>
 	</div>
 	</div>
 
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-<script src='js/bootstrap.js'></script>
+<!-- <script src='../vendor/assets/javascripts/bootstrap.min.js'></script> -->
 </body>
 
 </html>
