--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -21,23 +21,24 @@
 	<div id="quiz">
 	<div class='col-md-12'>
 		<ul>
-			<form>
+			<form id='quiz'>
 			<% @questions.each do |question| %>
 				<li><%= question.content %></li>
 				<% question.answers.each do |answer| %>
 				<%= radio_button_tag("answer[#{question.id}]", answer.id) %>
-				<%= label("answer_".concat(answer.id.to_s).to_sym, answer.content, class: 'answers') %>
+				<%= label("answer_".concat(answer.id.to_s).to_sym, answer.content, class: 'answers', data: {correct: answer.correct}) %>
 					<!-- <input type="radio" name="answers"><%= answer.content %> -->
 					<br>
 				<% end %>
-			</form>
+				<br>
 			<% end %>
-				<input type="submit" name="submitbtn">	
+				<input type="submit" name="submit_btn">	
+			</form>
+				
 		</ul>
 	</div>
 	</div>
 
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 <!-- <script src='../vendor/assets/javascripts/bootstrap.min.js'></script> -->
 </body>
 
