--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_tag({controller: "scores"}, method: "post", id: "quiz") %>
+<%= form_tag({controller: "questions"}, method: "post", id: "quiz") %>
 	<% @questions.each do |question| %>
 		<li><%= question.content %></li>
 			<% question.answers.each do |answer| %>
-				<%= radio_button_tag("answer[#{question.id}]", answer.id) %>
-				<%= label("answer_".concat(answer.id.to_s).to_sym, answer.content, class: 'answers', data: {correct: answer.correct}) %>
+				<%= radio_button_tag("answer[#{question.id}]", answer.id, checked = false, class: 'answers', data: {correct: answer.correct}) %>
+				<%= label("answer_".concat(answer.id.to_s).to_sym, answer.content) %>
 				<br>
 			<% end %>
 		<br>
