adding countdown clock to js. deleted animations from questions#index and changed #teststatus to #time for countdown clock

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -13,10 +13,8 @@
 	</head>
 
 	<body>
-		<h1 class="animated bounceInDown">Quiz of Thrones</h1>
-        <p class="animated fadeInUpDelay">Think you know Game of Thrones?</p>
 
-    	<div id='test_status'></div>
+    	<div id='time'></div>
 	
 			<div class='col-md-12'>
 				<ul>
