larger than usual commit. deleted extraneous code from questions#show. added breaks to question#index. changed root and format in routes. Linked 'start quiz' header to questions#index in layouts/_header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
           <li><%= link_to "Log in", '#' %></li>
         </ul>
         <ul class='nav navbar-nav navbar-left'>
-          <li><%= link_to "Start Quiz", '#' %></li>
+          <li id="start_quiz"><%= link_to "Start Quiz", questions_path %></li>
         </ul>  
       </nav>
     </div>
