--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -3,16 +3,20 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <br>
-            <a href="#quiz" class="btn btn-dark btn-lg">Start the Quiz!</a>
+            <br>
+            <br>
         </div>
     </header>
 
 	<head>
-		<title>Quiz of Thrones</title>
+		
 		
 	</head>
 
 	<body>
+		<h1>Quiz of Thrones</h1>
+
+		<button id="tempbtn"></button>
 
     	<div id='time'></div>
 	
