--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,3 @@
-<%= link_to "Start Quiz!", questions_path %>
-
-
-
-<!-- I want to list a question
-	the have each question come with 3 possible answers
-
-Then list another question
-	3 possible answers as radio buttons
-    only allow the user to choose one - radio buttons should take care of this. -->
 
 
 
@@ -18,29 +8,4 @@ Then list another question
 
 
 
-
-
-
-
-
-<!-- <html>
-
-<button>Think you know a lot about Game of Thrones?</button>
-
-<head>
-    <meta charset="utf-8">
-    <title>Basic Bootstrap Template</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-</head>
-<body>
-
-
-
-
-
-    <h1>hello weston</h1>
-    <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-    <sdcript src="js/bootstrap.min.js"></script>
-</body>
-</html> -->
+<h1>Landing Page</h1>
