--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -14,7 +14,7 @@
 	</head>
 
 	<body>
-		<h1>Quiz of Thrones</h1>
+		<h1 style="font-family:Game-of-Thrones;">QUIZ OF THRONES</h1>
 
 		<button id="tempbtn"></button>
 
