--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,12 +1,6 @@
 <div class='container'>
 
-    <header id="top" class="header">
-        <div class="text-vertical-center">
-            <br>
-            <br>
-            <br>
-        </div>
-    </header>
+
 
 	<head>
 		
@@ -14,8 +8,16 @@
 	</head>
 
 	<body>
-		
-		<h1 style="font-family:Game-of-Thrones;">QUIZ OF THRONES</h1>
+		<br>
+		<br>
+		<br>
+		<br>
+
+		<div class='col-md-12'>
+			<div id='title'>
+				<h1 style="font-family:Game-of-Thrones;">QUIZ OF THRONES</h1>
+			</div>
+		</div>
 
 		<button id="tempbtn"></button>
 
@@ -24,7 +26,7 @@
 			<div class='col-md-12'>
 				<ul>
 					<%= render 'form' %>
-				</ul>
+				</ul>	
 		
 			</div>
 
