moving h1 to head in questions#index

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -9,10 +9,11 @@
     </header>
 
 	<head>
-		<h1 style="font-family:Game-of-Thrones;">QUIZ OF THRONES</h1>
-		<br>
-		<br>
-		
+		<div class='row'>
+			<h1 style="font-family:Game-of-Thrones;">QUIZ OF THRONES</h1>
+			<br>
+			<br>
+		</div>
 	</head>
 
 	<body>
