added breaks to questions index, index actions in home controller, reformatted routes rooting to home#index, playing around with home index view.

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,18 +1,18 @@
 <div class='container'>
 
-    <header id="top" class="header">
+<!--     <header id="top" class="header">
         <div class="text-vertical-center">
             <br>
             <br>
             <br>
         </div>
-    </header>
+    </header> -->
 
 	<head>
 		<div class='row'>
 			<h1 style="font-family:Game-of-Thrones;">QUIZ OF THRONES</h1>
-			<br>
-			<br>
+				<br>
+				<br>
 		</div>
 	</head>
 
