added padding-top to body to fix overlap with nav bar. fixed indentation in header. added h1 into application layout. deleted commented header and head from questions index.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,12 @@
 			  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 			  <%= csrf_meta_tags %>
 	</head>
+
 	<body>
 		<%= render "layouts/header" %>
 
+		<h1 style="font-family:Game-of-Thrones;">QUIZ OF THRONES</h1>
+		
 		<%= yield %>
 
 		<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
