--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,7 @@
+<div class='row'>
+	<h2 style="font-family:Game-of-Thrones;">About</h2>
+</div>
 
-
-
-
-
-
-
-
-
-<head><title>Quiz of Thrones</title></head>
+<div class='row'>
+	<p>Quiz of Thrones was created to test your knowledge of the hit HBO series. No references to the books will be made. Ready to see how much you know about GOT?</p>
+</div>
