--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,11 @@
 
 	<body>
 		<%= render "layouts/header" %>
-
-		<h1 style="font-family:Game-of-Thrones;">QUIZ OF THRONES</h1>
 		
+		<div class='row'>
+			<h1 style="font-family:Game-of-Thrones;">QUIZ OF THRONES</h1>
+		</div>
+
 		<%= yield %>
 
 		<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
