styled home#index aka About Page 'start quiz' button and quiz submit button. Also, removed non minified bootstrap files

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,24 +30,25 @@ body{
 	/*line-height: 100%;*/
 }
 
-.questions{
+.questions, p{
 	line-height: 30px;
 	font-size: 22px;
 }
 
+p{
+	text-align: center;
+	padding: 0px 100px 0px 100px;
+}
 h1,h2{
 	font-family: "Game-of-Thrones";
 	text-align: center;
 	padding-bottom: 10px;
 }
 
-p{
-	text-align: center;
-}
-
 #quiz{
 	text-align: center;
 }
+
 ul{
 	list-style-type: none;
 }
@@ -60,6 +61,11 @@ ul{
     float: none;
     margin: 0 auto;
     text-align: center;
+}
+#about_pg_start_quiz_btn, #quiz_submit_btn{
+	padding: 15px 150px 15px 150px;
+	font-size: 25px;
+	margin-top: 20px;
 }
 
 
