--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,6 @@
 
 <div class='col-md-12 col-centered'>
 	<div class='row'>
-		<a href='/questions' button type="button" class="btn btn-primary btn-lg">Start Quiz!</a>
+		<a href='/questions' button type="button" class="btn btn-primary btn-lg" id='about_pg_start_quiz_btn'>Start Quiz!</a>
 	</div>
 </div>
