--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -30,6 +30,6 @@
 
 	<% end %>
 
-	<input type="submit" name="submit_btn" id='submit_btn'>	
+	<input type="submit" name="submit_btn" id='quiz_submit_btn'>	
 
 				
