--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,8 +1,6 @@
 <div class='container'>
 
-	<button id="tempbtn"></button>
-
-	<div id='time'></div>
+	<div>You have <span id='time'></span>left!</div>
 
 	<div class='col-md-12'>
 			
@@ -15,3 +13,5 @@
 
 
 </div>
+
+<%= javascript_include_tag params[:questions] %>
