--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,15 @@
 			<h1 style="font-family:Game-of-Thrones;">QUIZ OF THRONES</h1>
 		</div>
 
+		<!-- need these for devise gem -->
+		<% if notice %>
+ 			<p class="alert alert-success"><%= notice %></p>
+		<% end %>
+		
+		<% if alert %>
+  			<p class="alert alert-danger"><%= alert %></p>
+		<% end %>
+
 		<%= yield %>
 
 		<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
