high scores working

--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -10,11 +10,10 @@
   </thead>
 
   <tbody>
-    <% @scores.each do |score| %>
+    <% @high_scores.each do |score| %>
       <tr>
-        <td><%= link_to 'Show', score %></td>
-        <td><%= link_to 'Edit', edit_score_path(score) %></td>
-        <td><%= link_to 'Destroy', score, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td> <%=score.user.name %> </td>
+        <td> <%=score.correct.to_f %> </td>
       </tr>
     <% end %>
   </tbody>
