--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag({controller: "questions"}, method: "post", id: "quiz") %>
+<%= form_tag('/scores', method: :post, id: "quiz") %>
 	<% @questions.each do |question| %>
 		<ul>
 			<li class="questions"><%= question.content %></li>
@@ -31,5 +31,7 @@
 	<% end %>
 
 	<input type="submit" name="submit_btn" id='quiz_submit_btn'>	
+
+
 
 				
