--- a/app/views/scores/post_quiz.html.erb
+++ b/app/views/scores/post_quiz.html.erb
@@ -1,2 +1,27 @@
-<h1>hello world</h1>
+<h1>High Scores</h1>
 
+
+
+<!-- we want to list the User's most recent quiz score -->
+
+
+
+
+
+
+
+<table>	
+ <tbody>
+    <% @high_scores.each do |score| %>
+      <tr>
+      	<div class='col-md-12'>
+	        <td> <%=score.user.name %> </td>
+
+	        <td> <%=score.correct.to_f %>%</td>
+
+	        <td><%=score.created_at.strftime("%b. %d, %Y")%> </td>
+        </div>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
