--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -3,15 +3,12 @@
 		<ul>
 			<li class="questions"><%= question.content %></li>
 		</ul>
-
-		<br>
-		<br>
 		
 		<% question.answers.each do |answer| %>
 			<div class='col-md-12'>
 				<div class='input-group'>
 					<span class='input-group-addon'>
-						<%= radio_button_tag("answer[#{question.id}]", answer.id, checked = false, class: 'answers', data: {correct: answer.correct}) %>
+						<%= radio_button_tag("answer[#{question.id}]", answer.id, checked = false, class: 'answers'%>
 
 						<%= label("answer_".concat(answer.id.to_s).to_sym, answer.content) %>
 					</span>
@@ -19,10 +16,6 @@
 				</div>
 
 			</div>
-
-			<br>
-			<br>
-			<br>
 
 		<% end %>
 		
