--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,31 +15,35 @@
  *= require bootstrap.min
  */
 
+@media(max-width: 991px){
+	h1 {
+		padding-top: 115px;
+	}
+}
+
+
+
 @font-face{
 	font-family: "Game-of-Thrones";
 	src: url(/assets/Game-of-Thrones.ttf) format("truetype");
 }
-
-/*@font-face{
-	font-family: "SonOfTmU";
-	src: url(/assets/SonOfTmU.ttf) format("truetype");
-}*/
 
 body{
 	padding-top: 70px;
 	/*line-height: 100%;*/
 }
 
-.questions, p{
+.questions li, p{
 	line-height: 30px;
 	font-size: 22px;
+	padding: 10px 0 10px 0;
 }
 
 p{
 	text-align: center;
 	padding: 0px 200px 0px 200px;
 }
-h1,h2{
+h1,h2,h3{
 	font-family: "Game-of-Thrones";
 	text-align: center;
 	padding-bottom: 10px;
@@ -56,6 +60,9 @@ ul{
 .input-group{
 	padding: 0px 250px 0px 250px;
 }
+.input-group-addon{
+	padding-bottom: 10px;
+}
 
 .col-centered{
     float: none;
@@ -69,4 +76,13 @@ ul{
 	margin-top: 20px;
 }
 
+.high-scores-inputs{
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 25px;
+	padding-bottom: 40px;
+	font-weight: bold;
+}
+#scores-user-name{
 
+}
