--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,17 @@
 
 	<body>
 		<%= render "layouts/header" %>
-			
-		<div class='row'>
-			<h1 style="font-family:Game-of-Thrones;">QUIZ OF THRONES</h1>
+		<div class='container'>	
+			<div class='row'>
+				<h1>QUIZ OF THRONES</h1>
+			</div>
+
+
+
+
+
+			<%= yield %>
 		</div>
-
-
-
-
-
-		<%= yield %>
 
 		<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 		<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
