replacing parenthesis I accidently deleted

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -8,7 +8,7 @@
 			<div class='col-md-12'>
 				<div class='input-group'>
 					<span class='input-group-addon'>
-						<%= radio_button_tag("answer[#{question.id}]", answer.id, checked = false, class: 'answers'%>
+						<%= radio_button_tag("answer[#{question.id}]", answer.id, checked = false, class: 'answers')%>
 
 						<%= label("answer_".concat(answer.id.to_s).to_sym, answer.content) %>
 					</span>
