--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,7 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "About", home_index_path %></li>
-        <li><%= link_to "High Scores",   '#' %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <li><%= link_to "High Scores",scores_path %></li>
       </ul>
       
       <ul class='nav navbar-nav navbar-left'>
