--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,23 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Scores</h1>
-
-
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-
-     
-
-  </tbody>
-</table>
-
-<br>
-
-
+<%= render 'scores/highscores' %>
