refactoring. changed timer to 2 minutes. deleting extraneous files

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -12,7 +12,7 @@
 
 						<!-- adding empty dictionary as the second argument 
 						because label tag wasn't using proper capitalization -->
-						<%= label("answer", {}, answer.content) %>
+						<%= label("answer", {}, answer.content, class: 'answers_label') %>
 					</span>
 				
 				</div>
