--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
  */
 
 @media(max-width: 767px){
-	h1 {
+	h1,#time {
 		padding-top: 115px;
 	}
 }
@@ -34,6 +34,8 @@ body{
 }
 .questions{
 	padding: 10px 0 10px 0;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 20px;
 }
 .answers{
 	padding:3px 0 3px 0;
@@ -47,7 +49,7 @@ p{
 
 p{
 	text-align: center;
-	padding: 0px 200px 0px 200px;
+	padding: 0px 100px 0px 100px;
 }
 h1,h2,h3{
 	font-family: "Game-of-Thrones";
@@ -57,6 +59,7 @@ h1,h2,h3{
 
 #quiz{
 	text-align: center;
+	
 }
 
 ul{
@@ -65,6 +68,8 @@ ul{
 
 .input-group{
 	padding: auto;
+	border:1px 1px black;
+	box-shadow: black;
 }
 
 
@@ -73,6 +78,9 @@ ul{
 	font-size: 25px;
 	margin-top: 20px;
 	text-align: center;
+	margin-right: auto;
+	margin-left: auto;
+	width:100%;
 }
 
 .high-scores-inputs{
@@ -85,10 +93,11 @@ ul{
 #scores-user-name{
 
 }
-.label{
-	margin-bottom:0px;
+.answers_label{
+	margin-top:5px;
 }
 
 #time{
 	font-size: 30px;
+	z-index: 10000;
 }
