--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
+	<div class='container-fluid'>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "About", home_index_path %></li>
@@ -9,4 +10,5 @@
         <li id="start_quiz"><%= link_to "Start Quiz", questions_path %></li>
       </ul>  
     </nav>
+  </div>
 </header>
