--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,9 +1,10 @@
 	<span id='time'></span>
 
-	<div class='col-md-12'>
+<div class='col-md-3'></div>
+	<div class='col-md-6'>
 			
 		<%= render 'form' %>
 	
 	</div>
-
+<div class='col-md-3'></div>
 <%= javascript_include_tag "questions.js" %>
