--- a/app/views/scores/_highscores.html.erb
+++ b/app/views/scores/_highscores.html.erb
@@ -1,5 +1,15 @@
 <h2>High Scores</h2>
 
+<% if @is_new_highscore %> 
+	<%= form_tag('/scores', method: :post, id: "quiz") %>
+		<%= label_tag(:name, "Enter Your Name") %>
+		<%= text_field_tag(:name) %>
+		<%= hidden_field_tag(:correct, @score) %>
+		<%= submit_tag("Submit") %>
+	<br> 
+	<br>
+<% end %>
+
 	<div class='col-md-4 hidden-sm hidden-xs'>
 		<h3>Name</h3>
 	</div>
@@ -15,7 +25,7 @@
 	    <div class='high-scores-inputs'>
         <div class='col-md-4'>
         	<row>
-        			<%=score.user.name %> 
+        			<%=score.name %> 
       	</div>
 
       	<div class='col-md-4'>
