--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,7 +25,7 @@
 
 @font-face{
 	font-family: "Game-of-Thrones";
-	src: url(/assets/Game-of-Thrones.ttf) format("truetype");
+	src:font-url('Game-of-Thrones.ttf') format("truetype");
 }
 
 body{
