--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,6 +36,7 @@ body{
 	padding: 10px 0 10px 0;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 20px;
+	line-height: normal;
 }
 .answers{
 	padding:3px 0 3px 0;
